--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ p{
     margin: auto;
     padding-left: 1.5625rem;
     padding-right: 1.5625rem;
+    height: 100%;
 }
 
 .row{
@@ -64,18 +65,18 @@ p{
 }
 
 .col-2 h1{
-    font-size: 3.125rem;
-    line-height: 3.75rem;
-    margin: 1.5625rem 0;
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
 }
 
 .btn{
     display: inline-block;
     background: #EE1C25;
     color: #fff;
-    padding: 0.5rem 1.875rem;
-    margin: 1.875rem 0;
-    border-radius: 1.875rem;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
     transition: background 0.5s;
 }
 
@@ -84,9 +85,80 @@ p{
 }
 
 .header{
-    background: radial-gradient(#fff, #ffc5c5);
+    background: radial-gradient(#fff, #fab7b7);
 }
 
-.header .row{
-    margin-top: 4.375rem;
+.categories{
+    margin: 70px 0;
+}
+
+.col-3{
+    flex-basis: 30%;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+
+.col-3 img{
+    width: 100%;
+}
+
+.small-container{
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.col-4{
+    flex-basis: 25%;
+    padding: 10px;
+    min-width: 200px;
+    margin-bottom: 50px;
+    transition: transform 0.5s;
+}
+
+.col-4 img{
+    width: 100%;
+    height: 100%;
+}
+
+.title{
+    text-align: center;
+    margin: 0 auto 80px;
+    position: relative;
+    line-height: 60px;
+    color: #555;
+}
+
+.title::after{
+    content: '';
+    background: #EE1C25;
+    width: 80px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+h4{
+    color: #555;
+    font-weight: normal;
+}
+
+.col-4 p{
+    font-size: 14px;
+}
+
+.rating .fas{
+    color: #EE1C25;
+}
+
+.far{
+    color: #EE1C25;
+}
+
+.col-4:hover{
+    transform: translateY(-5px);
 }
