--- a/css/style.css
+++ b/css/style.css
@@ -337,3 +337,39 @@ ul{
         flex-basis: 100%;
     }
 }
+
+
+/*All Products page*/
+.row-2{
+    justify-content: space-between;
+    margin: 100px auto 50px; 
+}
+
+select{
+    border: 1px solid #EE1C25;
+    padding: 5px;
+}
+
+select:focus{
+    outline: none;
+}
+
+.page-btn{
+    margin: 0 auto 80px;
+}
+
+.page-btn span{
+    display: inline-block;
+    border: 1px solid #EE1C25;
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+}
+
+.page-btn span:hover{
+    background: #EE1C25;
+    color: #fff;
+}
