--- a/css/style.css
+++ b/css/style.css
@@ -328,16 +328,6 @@ ul{
     }
 }
 
-@media only screen and (max-width: 600px){
-    .row{
-        text-align: center;
-    }
-
-    .col-2, .col-3, .col-4{
-        flex-basis: 100%;
-    }
-}
-
 
 /*All Products page*/
 .row-2{
@@ -372,4 +362,91 @@ select:focus{
 .page-btn span:hover{
     background: #EE1C25;
     color: #fff;
+}
+
+
+
+/*Single Product Details*/
+.single-product{
+    margin-top: 80px;
+}
+
+.single-product .col-2 img{
+    padding: 0;
+}
+
+.single-product .col-2{
+    padding: 20px;
+}
+
+.single-product h4{
+    margin: 20px 0;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.single-product select{
+    display: block;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.single-product input{
+    width: 50px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 20px;
+    margin-right: 10px;
+    border: 1px solid #EE1C25;
+}
+
+input:focus{
+    outline: none;
+}
+
+.single-product .fa{
+    color: #EE1C25;
+    margin-left: 10px;
+}
+
+.small-img-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 600px){
+    .row{
+        text-align: center;
+    }
+
+    .col-2, .col-3, .col-4{
+        flex-basis: 100%;
+    }
+
+    .single-product .row{
+        text-align: left;
+    }
+
+    .single-product .col-2{
+        padding: 20px 0;
+    }
+
+    .single-product h1{
+        font-size: 26px;
+        line-height: 32px;
+    }
 }
