--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,7 @@ th:last-child{
     padding: 20px 0;
     margin: auto;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
 .form-container span{
@@ -520,6 +521,7 @@ th:last-child{
     padding: 0 20px;
     position: absolute;
     top: 130px;
+    transition: transform 1s;
 }
 
 form input{
@@ -545,20 +547,21 @@ form a{
     font-size: 12px;
 }
 
-#Indicator{
+#indicator-bar{
     width: 100px;
     border: none;
     background: #EE1C25;
     height: 3px;
     margin-top: 8px;
     transform: translateX(100px);
+    transition: transform 1s;
 }
 
-#LoginForm{
+#login-form{
     left: -300px;
 }
 
-#RegForm{
+#register-form{
     left: 0;
 }
 
